# is-it-slop

./: Cargo.toml  README.md  deny.toml  prek.toml
.github/workflows/: ci.yml
is-it-slop/: Cargo.toml
is-it-slop/src/: cli.rs  crate_metadata.rs  github.rs  main.rs
src/: cli.rs  crate_metadata.rs  github.rs  main.rs
