[package]
name = "is-it-slop"
description = "CLI for detecting slop smell"
version = "0.1.0"
edition = "2024"
license = "WTFPL"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
semver = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
ureq = { version = "3.3", features = ["json"] }
